@@ -4,6 +4,7 @@ Knot Resolver X.Y.X (yyyy-mm-dd)
 Bugfixes
 --------
 - fix map() command on 32-bit platforms; regressed in 5.2.0 (!1093)
+- doh2: restrict endpoints to doh and dns-query (#636, !1104)
 
 
 Knot Resolver 5.2.0 (2020-11-11)
